# ehWave

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: README.md  README.zh.md
examples/GPL_one_way_coupling/: GPLServer  setWaveField
examples/GPL_one_way_coupling/0/: U  alpha.water
examples/GPL_one_way_coupling/constant/: ehWaveProperties  fvOptions
examples/GPL_one_way_coupling/constant/polyMesh/: boundary  points
examples/GPL_one_way_coupling/system/: controlDict  fvSchemes  fvSolution  setWaveFieldDict
examples/regular_wave_2D/: plot_freesurface.py  run.sh  setWaveField
examples/regular_wave_2D/0/: p_rgh
examples/regular_wave_2D/0.orig/: alpha.water
examples/regular_wave_2D/constant/: ehWaveProperties  turbulenceProperties
examples/regular_wave_2D/constant/polyMesh/: faces
examples/regular_wave_2D/system/: blockMeshDict  controlDict  decomposeParDict
examples/regular_wave_3D/: plot_freesurface.py  run.sh
examples/regular_wave_3D/0/: U  alpha.water  p_rgh
examples/regular_wave_3D/constant/: ehWaveProperties  fvOptions  g
examples/regular_wave_3D/system/: blockMeshDict  controlDict  decomposeParDict  setWaveFieldDict
examples/start_from_calm_water/: plot_freesurface.py
examples/start_from_calm_water/0.orig/: U  alpha.water
examples/start_from_calm_water/constant/: ehWaveProperties  fvOptions
examples/start_from_calm_water/constant/polyMesh/: owner
examples/start_from_calm_water/system/: controlDict  setWaveFieldDict
examples/stokes_wave_2D/: run.sh
examples/stokes_wave_2D/0/: U
examples/stokes_wave_2D/constant/: ehWaveProperties  transportProperties
examples/stokes_wave_2D/constant/polyMesh/: neighbour
inc/: CalmWater.hpp  ehEOM.hpp  ehFreeSurfaceCoupling.hpp  ehWaveAlpha.hpp  ehWaveVel.hpp  pocketfft_eigen.hpp  waveModel.hpp
inc/waveModels/: GPLWave.hpp  RegularWave.hpp  StokesWave.hpp
src/: CalmWater.cxx  StokesWave.cxx  ehEOM.cxx  ehFreeSurfaceCoupling.cxx  ehWaveAlpha.cxx  ehWaveVel.cxx  setWaveField.cxx  setWaveFieldFunc.cxx  waveModel.cxx
src/waveModels/: CalmWater.cxx  GPLWave.cxx  RegularWave.cxx  StokesWave.cxx
